--- a/src/style.css
+++ b/src/style.css
@@ -451,6 +451,14 @@ button:focus {
   background-image: var(--section-background-color) !important;
 }
 
+
+.experience-section{
+  position: relative !important;
+  padding-top: 150px !important;
+  padding-bottom: 30px !important;
+  background-image: var(--section-background-color) !important;
+}
+
 .project-card {
   padding-top: 50px !important;
   padding-bottom: 50px !important;
@@ -538,6 +546,13 @@ button:focus {
   padding-top: 10px !important;
 }
 
+.company-heading{
+  color: white !important;
+  font-size: 2.8em !important;
+  font-weight: 500 !important;
+  padding-top: 10px !important;
+}
+
 /* --------- */
 /* About */
 /* --------- */
@@ -560,6 +575,16 @@ button:focus {
   text-align: center !important;
   border-radius: 5px !important;
   display: table !important;
+  box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
+  overflow: hidden !important;
+  transition: all 0.4s ease 0s !important;
+}
+
+.experience-description{
+  padding: 10px !important;
+  opacity: 0.93 !important;
+  border: 1.7px solid rgba(200, 137, 230, 0.637) !important;
+  border-radius: 5px !important;
   box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
   overflow: hidden !important;
   transition: all 0.4s ease 0s !important;
